navtoggle mouse if statement fixes nav, input sizing in index.scss... next work on z-index

--- a/src/assets/scss/index.scss
+++ b/src/assets/scss/index.scss
@@ -2,8 +2,13 @@
 @import
 	'visuals/colors', 'visuals/typography', 'visuals/lightmode',
 	'styles/clearfix', 'styles/flex()', 'styles/breakpoint()',
-
 	'components/button', 'components/navigation', 'components/projects', 'components/skills', 'components/tocontact', 'components/images', 'components/modal', 'components/forms',
-
 	'routes/case-study', 'routes/contact', 'routes/home', 'routes/about';
-	// 'apps/apps', 'apps/nps', 'apps/todo', 'apps/game';
+
+// chrome zooms in on font-size < 16px
+	input,
+	::placeholder{
+		@include breakpoint(mobile){
+			font-size: 16px;
+		}
+	}
